# DeformationTracking

./: .clang-format  .gitignore  API.toml  CMakeLists.txt  MyPluginConfig.cmake.in  README.md  obj_to_cao.py
DefTrack/: Cube.0.pos  Cube.cao  Cube.init  Cube.json  Cube.ply  Cube.step  Cube.stl  Cube.vtk  Cube.vtu  Cube.xml  Cube_depth.xml
RigidTracking/: CMakeLists.txt
RigidTracking/data/: depth_M_color.txt
RigidTracking/src/: Tracking.cpp
binding/: CMakeLists.txt
cmake/: environment.cmake
data/: SimpleCuboid.calib  SimpleCuboid.cao  SimpleCuboid.init  SimpleCuboid.vtk  SimpleCuboid.vtu  SimpleCuboid.xyz  SimpleCuboid_rescaled.cao  SimpleCuboid_rescaled.init  SimpleCuboid_rescaled.ply  SimpleCuboid_rescaled.vtk  SimpleCuboid_rescaled.vtu  TetrahedronLogger.ods  ball_404pts.xyz  blender_org.xml  cube_sharp.cao  cube_sharp.ply  cube_sharp.vtk  cube_sharp.vtu  cube_sharp.xyz  dice.cao  dice.init  dice.ply  dice.vtk  dice.vtu  dice.xyz  dice_clean1.ply  dice_clean2.ply  dice_clean3.ply  dice_clean4.ply  dice_clean5.ply  dice_simplified.vtk  dice_simplified.vtu  dice_simplified.xyz  ico_sphere.calib  outputcpp_log.txt  pizza.cao  pizza.ply  pizza.vtk  pizza.vtu  pizza_24.calib  (+39 more)
data/ball/: data.csv
data/pcd/: cube.pcd
data/pizza/: pizza_24.cao  pizza_24.init  pizza_24.ply  pizza_24.vtk  pizza_24.vtu
data/sponge/: data.csv
data/sponge2/: sponge_iros.ply  sponge_iros.vtk  sponge_iros.vtu  sponge_iros.xyz
data/tetgen/: ico_sphere.1.edge  ico_sphere.1.ele  ico_sphere.1.face  ico_sphere.1.node  ico_sphere.1.smesh  ico_sphere.cao  ico_sphere.init  ico_sphere.vtk  ico_sphere.vtu  ico_sphere.xyz
data/tetgen/ball_pedestal_ico/: ball_icosphere_pedestal.ply  ball_icosphere_pedestal.vtk  ball_icosphere_pedestal.vtu  ball_icosphere_pedestal.xyz
data/tetgen/cube_cvpr_2/: sponge_cvpr_2.1.edge  sponge_cvpr_2.1.ele  sponge_cvpr_2.1.face  sponge_cvpr_2.1.node  sponge_cvpr_2.1.smesh  sponge_cvpr_2.ply  sponge_cvpr_2.vtk  sponge_cvpr_2.vtu
data/tetgen/cube_cvpr_3/: sponge_cvpr_3.1.edge  sponge_cvpr_3.1.ele  sponge_cvpr_3.1.face  sponge_cvpr_3.1.node  sponge_cvpr_3.1.smesh  sponge_cvpr_3.ply  sponge_cvpr_3.vtk  sponge_cvpr_3.vtu
data/tetgen/dice/: dice_simple.ply  dice_simple.vtk  dice_simple.vtu  dice_simple.xyz
old_data/data/: outputadditional_info.txt  pose.txt
old_data/data/pcd/: 1.pcd
old_data/scene/: force_manager.py
scene/: DepthAnalyticJacobianTest.py  DepthAnalyticJacobianTest2.py  deformation_tracking.py  deformation_tracking.scn  displacement_manager.py  force_manager.py  parameter.properties  parameter_MyCube.properties  parameter_ball.properties  parameter_cube5.properties  parameter_sponge.properties  parameters.py  res2.txt
src/: initMyPlugin.cpp  initMyPlugin.h
src/components/DefTrack/: DeformationTracking.cpp  DeformationTracking.h  JacobianFEM.cpp  JacobianFEM.h  NonRigidMatching.cpp  NonRigidMatching.h  OcclusionCheck.cpp  OcclusionCheck.h  OrthotropicTetrahedralCorotationalFEMForceField.cpp  OrthotropicTetrahedralCorotationalFEMForceField.h  OrthotropicTetrahedralCorotationalFEMForceField.inl  README.md  RigidTracking.cpp  RigidTracking.h  Sensor.cpp  Sensor.h  initDeformationTrackingPlugin.cpp
src/components/DeformationTracking/: DeformationTracking.cpp  DeformationTracking.h  JacobianFEM.cpp  NonRigidMatching.cpp  NonRigidMatching.h  OcclusionCheck.cpp  OcclusionCheck.h  RigidTracking.cpp  RigidTracking.h  config.h  initDeformationTrackingPlugin.cpp
src/components/MyComponent/: MyComponent.cpp  MyComponent.h
tests/: test.py  test.scn
